Fixed bug with margin whitespace.

--- a/Lab12/styles/style.css
+++ b/Lab12/styles/style.css
@@ -9,10 +9,13 @@
 /*MAIN*/
 body{
     margin-bottom: 5%;
+    margin-top: 0;
+    margin-right: 0;
 }
 
 #wrapper{
     margin-left: 1em;
+    margin-right: 1em;
 }
 
 #main-header{
